-- documentation, see http://haskell.org/cabal/users-guide/

name:                Buster
version:             0.0.0.1
synopsis:            Hits a set of urls periodically to bust caches
-- description:         
license:             MIT
license-file:        LICENSE
author:              Michael Xavier
maintainer:          michael@michaelxavier.net
copyright:           (c) 2012 Michael Xavier
category:            Web
build-type:          Simple
cabal-version:       >=1.8
tested-with:         GHC == 7.6.1
extra-source-files:
  README.md
  LICENSE
  TODO
  examples/example.yml

executable buster
  hs-source-dirs:      src
  main-is:             Buster/Main.hs
  ghc-options: -threaded
  build-depends:  base >= 4 && < 5,
                  bytestring ==0.10.*,
                  conduit ==0.5.*,
                  yaml ==0.8.*,
                  errors ==1.3.*,
                  unix ==2.6.*,
                  http-conduit ==1.8.*,
                  http-types ==0.7.*,
                  unbounded-delays ==0.1.*,
                  data-default ==0.5.*,
                  hslogger ==1.2.*,
                  transformers ==0.3.*,
                  hinotify ==0.3.*

test-suite spec
  type:           exitcode-stdio-1.0
  main-is:        Spec.hs
  hs-source-dirs: test,src
  build-depends:  base >= 4 && < 5,
                  bytestring ==0.10.*,
                  hspec == 1.4.*,
                  hspec-expectations == 0.3.*,
                  string-qq,
                  http-types ==0.7.*,
                  temporary ==1.1.*,
                  yaml ==0.8.*,
                  -- WHY?
                  http-conduit ==1.8.*
